# food-ordering

./: CMakeLists.txt  README.md  accountData.c  accountData.h  choice.c  choice.h  cutlery.c  cutlery.h  display.c  display.h  drinks.c  drinks.h  encryption.c  encryption.h  extraAssignment3.c  extraAssignment3.h  freeMemory.c  freeMemory.h  loadData.c  loadData.h  main.c  userData.c  userData.h
